# swagger_server/service/student_service.py
@@ -7,7 +7,6 @@ from tinydb import TinyDB, Query
 from tinydb.middlewares import CachingMiddleware
 from functools import reduce
 import uuid
-
 from swagger_server.models import Student
 
 db_dir_path = tempfile.gettempdir()
@@ -16,15 +15,17 @@ student_db = TinyDB(db_file_path)
 
 
 def add_student(student):
+    if (student.first_name is None) | (student.last_name is None):
+        return 'provide all information', 405
     queries = []
     query = Query()
     queries.append(query.first_name == student.first_name)
     queries.append(query.last_name == student.last_name)
+    queries.append(query.grades == student.grades)
     query = reduce(lambda a, b: a & b, queries)
     res = student_db.search(query)
     if res:
         return 'already exists', 409
-
     doc_id = student_db.insert(student.to_dict())
     student.student_id = doc_id
     return student.student_id
@@ -37,7 +38,22 @@ def get_student_by_id(student_id, subject):
     student = Student.from_dict(student)
     if not subject:
         return student
+    if subject in student.grades.keys():
+        return student
+    else:
+        return 'subject not in grades', 404
+    return student
 
+
+def get_student_by_last_name(last_name):
+    query = Query()
+    student = student_db.get(query.last_name==last_name)
+    print(student)
+    if not student:
+        return student
+    student = Student.from_dict(student)
+    return student
+    
 
 def delete_student(student_id):
     student = student_db.get(doc_id=int(student_id))
