# swagger_server/swagger/swagger.yaml
@@ -37,6 +37,29 @@ paths:
         "409":
           description: "already exists"
       x-swagger-router-controller: "swagger_server.controllers.default_controller"
+  /student/:
+    get:
+      summary: "Find student by last name"
+      description: "Returns a single student"
+      operationId: "get_student_by_last_name"
+      produces:
+      - "application/xml"
+      - "application/json"
+      parameters:
+      - name: "last_name"
+        in: query
+        description: "Last name"
+        type: string
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Student"
+        "400":
+          description: "Invalid last name supplied"
+        "404":
+          description: "student not found"
+      x-swagger-router-controller: "swagger_server.controllers.default_controller"  
   /student/{student_id}:
     get:
       summary: "Find student by ID"
@@ -55,6 +78,11 @@ paths:
       - name: "subject"
         in: "query"
         description: "The subject name"
+        required: false
+        type: "string"
+      - name: "last_name"
+        in: query
+        description: "Last name"
         required: false
         type: "string"
       responses:
